--- a/style.css
+++ b/style.css
@@ -237,3 +237,183 @@ html,body{
     object-fit: cover;
     transition:transform 1s ease ;
 }
+.slide .img:hover{ 
+    transform: translateY(-20px);
+}
+.slide .img img{ 
+    width: 100%;
+    height: 100%;
+}
+.slide .tag{
+    width: fit-content;
+    background-color: rgb(236, 236, 236);
+    border-radius: 100px;
+    margin: 20px 0px;
+    padding: 10px 22px;
+}
+.slide .tag:hover{
+    transition: ease-in-out 1s;
+    transform: scale3d(2);
+    transform: translate3d(5);
+    color: white;
+    background-color: #000;
+    translate:-10px -10px 5px ;
+    font-size: 1.2vw;
+}
+#reel{
+    margin: 15vw 0 ;
+    padding: 10vw 0; 
+    height: 100vh;
+    position: relative;
+}
+#reel video{
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+}
+#newday{
+    width: 100%;
+    padding: 5vw 15vw;
+}
+#newday h1{
+    font-size: 4vw;
+    width: 40%;
+    text-transform: capitalize;
+    font-weight: 550;
+    line-height: 1.2;
+}
+#images{
+    padding:5vw ;
+    padding-left: 15vw;
+    display: flex;
+    justify-content: space-between;
+}
+
+.inspo{
+    width: 22%;
+}
+.inspo .img{
+    height: 260px; 
+    width: 100%;
+    border-radius: 30px;
+    overflow: hidden;
+    object-fit: cover;
+    transition: transform 0.5s ease;
+
+}
+.inspo .img:hover{
+    transform: translateY(-20px);
+}
+.inspo .img1:hover{
+    transform: translateY(-20px);
+}
+.inspo .img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}.inspo .img1{
+    margin-top: 2.8vw;
+    height: 220px; 
+    width: 100%;
+    border-radius: 30px;
+    overflow: hidden;
+    object-fit: cover;
+    transition: transform 0.5s ease;
+}
+.tagicon{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    padding: 2vw 0;
+}
+.tagicon h3{
+    margin-left: 10px;
+    font-size: 1.2vw;
+    letter-spacing: 0.5px;
+    font-weight: 400;
+}
+#foot{
+    background-color: #000;
+    width: 100%;
+    color: white;
+    border-top-left-radius: 100px;
+    border-top-right-radius: 100px;
+}
+#foot .scroller marquee{
+    padding-top: 6vw;
+    color: #fff;
+    font-size:15vw;
+    font-weight: 100;
+}
+#foot .scroller marquee video{
+    border-radius: 50%;
+}
+#foot #socialmedia{
+    width: 100%;
+    padding: 6vw 6vw;
+}
+
+#socialmedia h2{
+    text-transform: uppercase;
+    font-size: 1.2vw;
+    font-weight: 400; 
+    letter-spacing: 1.3px;
+}
+.ssss a{
+    text-decoration: none;
+    color: #fff;
+}
+#socialmedia .ssss{
+    text-transform: capitalize;
+    font-size: 2vw;
+    margin: 4vw 0;
+    font-weight: 400;
+    display: flex;
+    justify-content: space-between;
+ }
+ hr{
+    border: 1px solid white; 
+    opacity: 0.3;
+ }
+#address{
+    padding: 5vw 8vw;
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+#address .aleft, .aright{
+    width: 30%;
+}
+#address .aleft h5 ,.aright h5{
+   text-transform: capitalize;
+   font-weight: 200;
+   padding: 1vw 0;
+}
+#address .aleft h2 ,.aright h2{
+    text-transform: capitalize;
+    font-weight: 500;
+}
+.btnl{
+    width: 70%;
+    padding: 2vw 0;
+}
+.btnl .bt{
+    padding: 1vw 1vw;
+    border-radius: 100px;
+    font-size: 1.5vw;
+    color: #fff;
+    background-color: #000;
+    border: 2px solid white;
+}
+.privacy{
+    display: flex;
+    justify-content: center;
+    padding-top: 5vw;
+    padding-bottom: 2vw;
+    font-size: 1vw;
+    letter-spacing:1px;
+
+}
